--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
+	<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="WHITE-X | Portfolio">
+<meta property="og:description" content="My personal portfolio showcasing my skills, projects, and experience.">
+<meta property="og:image" content="https://w-h-i-t-e-x.github.io/x/p.png">
+<meta property="og:url" content="https://w-h-i-t-e-x.github.io/x/">
+<meta name="twitter:card" content="summary_large_image">
+
     <style>
         body {
             margin: 0;
