--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Open Graph Meta Tags -->
 <meta property="og:title" content="WHITE-X | Portfolio">
 <meta property="og:description" content="My personal portfolio showcasing my skills, projects, and experience.">
-<meta property="og:image" content="https://w-h-i-t-e-x.github.io/x/p.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/W-H-I-T-E-X/x/refs/heads/main/p.png">
 <meta property="og:url" content="https://w-h-i-t-e-x.github.io/x/">
 <meta name="twitter:card" content="summary_large_image">
 
