--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
 
             <div class="project">
-                <h3><i class="fa-solid fa-database" style="color: #294172;"></i><a href="https://d4t4b4c8.github.io/cmp" target="_blank" style="color:#af7ac5; text-decoration:none;"> Chart Dashboard</a></h3>
+                <h3><i class="fa-solid fa-database" style="color: #294172;"></i><a href="https://crdatabase.netlify.app/b36fa2493f2d3ffcd8231e8b2378fba3606a0e90732908dbbb851cc3d48db74e.html" target="_blank" style="color:#af7ac5; text-decoration:none;"> Chart Dashboard</a></h3>
                  
                 <p>Monthly sales & purchase analytics using Chart.js, including bar and pie charts for mobile inventory.</p>
             </div>
